--- a/css/app.css
+++ b/css/app.css
@@ -19,24 +19,51 @@ body {
 .introduction {
   display: flex;
   flex-direction: column;
-  height: 60vh;
-  background-image: url(../images/pf.jpg);
+  min-height: 70vh;
+  /* background-image: url(../images/pf.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
   align-items: center;
-  font-size: 1.6em;  
+  font-size: 1.6em;
+}
+
+.introduction .background-image {
+  /* background-image: url(../images/pf.jpg); */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70%;
+  background-size: cover;
+  z-index: -1;
+  background-color: #000;
+  filter: blur(2px);
+}
+
+.introduction .button {
+  padding: 10px;
+  border: none;
+  outline: none;
+  background: #fff;
+  color: #000;
+  letter-spacing: 3px;
+  /* width: 120px; */
+  font-size: 1.3em;
+  border-radius: 4px;
+  text-decoration: none;
 }
 
 .portfolio-title {
   text-align: center;
   letter-spacing: 0.4em;
   text-transform: uppercase;
+  /* color: #fff; */
 }
 
 .portfolio {
   display: flex;
-  justify-content: center;  
+  justify-content: center;
 }
 
 .portfolio .project {
@@ -50,12 +77,12 @@ flex-direction: column;
 
 .project .image {
 /*   max-width: 100%; */
-  vertical-align: top; 
+  vertical-align: top;
   height: 230px;
 }
 
 .project {
-  position: relative;  
+  position: relative;
   overflow: hidden;
   margin: 10px 1%;
   min-width: 220px;
@@ -131,4 +158,3 @@ footer {
   }
 
 }
-
