--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ body {
 .introduction {
   display: flex;
   flex-direction: column;
-  min-height: 70vh;
+  min-height: 100vh;
   /* background-image: url(../images/pf.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,7 +34,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70%;
+  height: 100%;
   background-size: cover;
   z-index: -1;
   background-color: #000;
@@ -157,4 +157,12 @@ footer {
     width: 90%;
   }
 
+  .introduction{
+    font-size: 1.3em;
+  }
+
+  .introduction .button{
+    padding: 6px;
+    font-size: 1em;
+  }
 }
